<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_control</name>
  <version>0.0.1</version>
  <description>Package for turning on and off bag logging based on a mavros state message</description>
  <maintainer email="pierce@ladonrobotics.com">Pierce Nichols</maintainer>
  <license>GPL v3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
